--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,7 @@ process.executor = 'pbs'
 
 // Define default resources for all processes.
 // These can be overridden on a per-process basis in main.nf
-process.container = 'docker'
+#process.container = 'docker'
 process.cpus = 12
 process.memory = '16GB'
 process.time = '2h'
