--- a/nextflow.config
+++ b/nextflow.config
@@ -2,35 +2,41 @@
 
 params.coverage_dir = "/home/projects/cu_10031/data/raw/DNBC_methylation_2023/2025_analysis/child_dataset"
 
-// Set the default executor to qsub
-process.executor = 'pbs'
-// Optional: set a default queue if your cluster uses one
-// process.queue = 'my_queue'
-
+process.executor = 'pbs' 
 // Define default resources for all processes.
-// These can be overridden on a per-process basis in main.nf
-#process.container = 'docker'
 process.cpus = 12
 process.memory = '16GB'
 process.time = '2h'
 
-// Define a per-process configuration to override defaults for specific,
-// resource-intensive steps.
-withName: 'data_prep' {
-    process.cpus = 12
-    process.memory = '64GB'
-    process.time = '12h'
-}
 
-withName: 'qc_and_plots' {
-    process.cpus = 24
-    process.memory = '64GB'
-    process.time = '12h'
-}
+profiles {
+    cluster {
+        // --- Cluster-wide settings for the 'cluster' profile ---
+        // This overrides the global 'pbs' setting
+        process.executor = 'slurm' 
+        singularity.enabled = true
+        singularity.autoMounts = true
 
-withName: 'dml_.*' {
-    // This is a regular expression that applies to all dml processes
-    process.cpus = 24
-    process.memory = '128GB'
-    process.time = '10h'
+        // --- Per-Process Overrides ---
+        process {
+            withName('data_prep') {
+                cpus = 8
+                memory = '64GB'
+                time = '12h'
+            }
+
+            withName('qc_and_plots') {
+                cpus = 24
+                memory = '64GB'
+                time = '12h'
+            }
+            
+            withName('dml_.*') {
+               // This is a regular expression that applies to all dml processes
+               cpus = 24
+               memory = '128GB'
+               time = '10h'
+            }
+        }
+    }
 }
