--- a/nextflow.config
+++ b/nextflow.config
@@ -1,42 +1,60 @@
-// nextflow.config
-
-params.coverage_dir = "/home/projects/cu_10031/data/raw/DNBC_methylation_2023/2025_analysis/child_dataset"
-
-process.executor = 'pbs' 
-// Define default resources for all processes.
-process.cpus = 12
-process.memory = '16GB'
-process.time = '2h'
-
-
-profiles {
-    cluster {
-        // --- Cluster-wide settings for the 'cluster' profile ---
-        // This overrides the global 'pbs' setting
-        process.executor = 'slurm' 
-        singularity.enabled = true
-        singularity.autoMounts = true
-
-        // --- Per-Process Overrides ---
-        process {
-            withName('data_prep') {
-                cpus = 8
-                memory = '64GB'
-                time = '12h'
-            }
-
-            withName('qc_and_plots') {
-                cpus = 24
-                memory = '64GB'
-                time = '12h'
-            }
-            
-            withName('dml_.*') {
-               // This is a regular expression that applies to all dml processes
-               cpus = 24
-               memory = '128GB'
-               time = '10h'
-            }
-        }
-    }
+// -------------------------------------------------------------------------
+// 1. Nextflow Parameters (params)
+// -------------------------------------------------------------------------
+params {
+    outdir = "$projectDir/results"
+    covars = "$projectDir/covars_all.csv"
+    datadir = "$projectDir"
+    coverage_dir = "/home/projects/cu_10031/data/raw/DNBC_methylation_2023/2025_analysis/child_dataset"
 }
+
+// -------------------------------------------------------------------------
+// 2. Global Settings
+// -------------------------------------------------------------------------
+manifest {
+    name = 'RRBS_Methylation_Analysis'
+    author = 'Simran K'
+    version = '1.0'
+    description = 'RRBS analysis pipeline using methylKit and R.'
+}
+
+// 1. Define the timestamp parameter
+params.trace_timestamp = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
+
+// 2. Update trace, report, timeline, and dag blocks with specific file paths
+
+trace {
+    enabled = true 
+    overwrite = true 
+    file = "./runInfo/trace-${params.trace_timestamp}.txt"
+    fields = 'name,status,exit,duration,realtime,cpus,%cpu,memory,%mem,peak_rss'
+}
+
+timeline {
+    enabled = true 
+    overwrite = true
+    file = "./runInfo/timeline-${params.trace_timestamp}.html"
+}
+
+report {
+    enabled = true 
+    overwrite = true
+    file = "./runInfo/report-${params.trace_timestamp}.html"
+}
+
+dag {
+    enabled = true 
+    overwrite = true
+    file = "./runInfo/pipeline_dag-${params.trace_timestamp}.png"
+}
+
+// -------------------------------------------------------------------------
+// 3. Profiles (The HPC Cluster Configuration)
+// -------------------------------------------------------------------------
+// Define HPC profiles to run with job scheduler
+profiles {
+    cluster { includeConfig "config/hpc.config"}
+}
+
+
+
