Update coverage directory path in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params {
     outdir = "$projectDir/results"
     covars = "$projectDir/covars_all.csv"
     datadir = "$projectDir"
-    coverage_dir = "/home/projects/cu_10031/data/raw/DNBC_methylation_2023/2025_analysis/child_dataset"
+    coverage_dir = "/****/dataset"
 }
 
 // -------------------------------------------------------------------------
