Update clusterOptions in pbspro.config

--- a/config/pbspro.config
+++ b/config/pbspro.config
@@ -11,7 +11,7 @@ process {
             module load singularity/4.3.0
             '''
 
-    clusterOptions = "-W group_list=cu_10031 -A cu_10031 -l nodes=1:ppn=12,mem=128,walltime=20:00:00"
+    clusterOptions = "-W group_list=**** -A **** -l nodes=1:ppn=12,mem=128,walltime=20:00:00"
     stageInMode = 'symlink'
     cache = 'lenient'
 }
